.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:24:45 **** Incremental Build of configuration Debug for project tank_level_control ****
make -j12 all 
arm-none-eabi-g++ "../Core/Src/main.cpp" -mcpu=cortex-m3 -std=gnu++14 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-use-cxa-atexit -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.cpp: In function 'int main()':
../Core/Src/main.cpp:140:53: error: no matching function for call to 'PIDController::processPID(double, double, double)'
  140 |   pump_pid_controller.processPID(22.0, 0.000015, 0.0);
      |                                                     ^
In file included from ../Core/Src/main.cpp:27:
../Core/Src/pid_controller/PIDController.h:47:9: note: candidate: 'float PIDController::processPID(float)'
   47 |   float processPID(float curr_point);
      |         ^~~~~~~~~~
../Core/Src/pid_controller/PIDController.h:47:9: note:   candidate expects 1 argument, 3 provided
In file included from ../Core/Src/height_sensor/HeightSensor.h:12,
                 from ../Core/Src/main.cpp:26:
../Core/Inc/fir_coeffs.h: At global scope:
../Core/Inc/fir_coeffs.h:3:14: warning: 'FIR_COEFFS' defined but not used [-Wunused-variable]
    3 | static float FIR_COEFFS[FILTER_NUM_COEFFS] = {
      |              ^~~~~~~~~~
make: *** [Core/Src/subdir.mk:43: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
21:25:39 **** Incremental Build of configuration Debug for project tank_level_control ****
make -j12 all 
arm-none-eabi-g++ "../Core/Src/main.cpp" -mcpu=cortex-m3 -std=gnu++14 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-use-cxa-atexit -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
In file included from ../Core/Src/height_sensor/HeightSensor.h:12,
                 from ../Core/Src/main.cpp:26:
../Core/Inc/fir_coeffs.h:3:14: warning: 'FIR_COEFFS' defined but not used [-Wunused-variable]
    3 | static float FIR_COEFFS[FILTER_NUM_COEFFS] = {
      |              ^~~~~~~~~~
arm-none-eabi-g++ -o "tank_level_control.elf" @"objects.list"   -mcpu=cortex-m3 -T"/home/senai/conical_tank_level_controller/tank_level_control/STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="tank_level_control.map" -Wl,--gc-sections -static -u _printf_float --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -lstdc++ -lsupc++ -Wl,--end-group
Finished building target: tank_level_control.elf
 
arm-none-eabi-size   tank_level_control.elf 
arm-none-eabi-objdump -h -S  tank_level_control.elf  > "tank_level_control.list"
arm-none-eabi-objcopy  -O binary  tank_level_control.elf  "tank_level_control.bin"
   text	   data	    bss	    dec	    hex	filename
  34096	    748	   2044	  36888	   9018	tank_level_control.elf
Finished building: default.size.stdout
 
Finished building: tank_level_control.bin
 
Finished building: tank_level_control.list
 
21:25:54 **** Incremental Build of configuration Debug for project tank_level_control ****
make -j12 all 
arm-none-eabi-size   tank_level_control.elf 
   text	   data	    bss	    dec	    hex	filename
  34096	    748	   2044	  36888	   9018	tank_level_control.elf
Finished building: default.size.stdout
 
21:26:49 **** Incremental Build of configuration Debug for project tank_level_control ****
make -j12 all 
arm-none-eabi-size   tank_level_control.elf 
   text	   data	    bss	    dec	    hex	filename
  34096	    748	   2044	  36888	   9018	tank_level_control.elf
Finished building: default.size.stdout
 
21:27:57 **** Incremental Build of configuration Debug for project tank_level_control ****
make -j12 all 
arm-none-eabi-size   tank_level_control.elf 
   text	   data	    bss	    dec	    hex	filename
  34096	    748	   2044	  36888	   9018	tank_level_control.elf
Finished building: default.size.stdout
 
21:38:29 **** Incremental Build of configuration Debug for project tank_level_control ****
make -j12 all 
arm-none-eabi-g++ "../Core/Src/main.cpp" -mcpu=cortex-m3 -std=gnu++14 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-use-cxa-atexit -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
In file included from ../Core/Src/height_sensor/HeightSensor.h:12,
                 from ../Core/Src/main.cpp:26:
../Core/Inc/fir_coeffs.h:3:14: warning: 'FIR_COEFFS' defined but not used [-Wunused-variable]
    3 | static float FIR_COEFFS[FILTER_NUM_COEFFS] = {
      |              ^~~~~~~~~~
arm-none-eabi-g++ -o "tank_level_control.elf" @"objects.list"   -mcpu=cortex-m3 -T"/home/senai/conical_tank_level_controller/tank_level_control/STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="tank_level_control.map" -Wl,--gc-sections -static -u _printf_float --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -lstdc++ -lsupc++ -Wl,--end-group
Finished building target: tank_level_control.elf
 
arm-none-eabi-size   tank_level_control.elf 
arm-none-eabi-objdump -h -S  tank_level_control.elf  > "tank_level_control.list"
arm-none-eabi-objcopy  -O binary  tank_level_control.elf  "tank_level_control.bin"
   text	   data	    bss	    dec	    hex	filename
  34008	    748	   2044	  36800	   8fc0	tank_level_control.elf
Finished building: default.size.stdout
 
Finished building: tank_level_control.bin
 
Finished building: tank_level_control.list
 
21:45:46 **** Incremental Build of configuration Debug for project tank_level_control ****
make -j12 all 
arm-none-eabi-g++ "../Core/Src/main.cpp" -mcpu=cortex-m3 -std=gnu++14 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-use-cxa-atexit -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
In file included from ../Core/Src/height_sensor/HeightSensor.h:12,
                 from ../Core/Src/main.cpp:26:
../Core/Inc/fir_coeffs.h:3:14: warning: 'FIR_COEFFS' defined but not used [-Wunused-variable]
    3 | static float FIR_COEFFS[FILTER_NUM_COEFFS] = {
      |              ^~~~~~~~~~
arm-none-eabi-g++ -o "tank_level_control.elf" @"objects.list"   -mcpu=cortex-m3 -T"/home/senai/conical_tank_level_controller/tank_level_control/STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="tank_level_control.map" -Wl,--gc-sections -static -u _printf_float --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -lstdc++ -lsupc++ -Wl,--end-group
Finished building target: tank_level_control.elf
 
arm-none-eabi-size   tank_level_control.elf 
arm-none-eabi-objdump -h -S  tank_level_control.elf  > "tank_level_control.list"
arm-none-eabi-objcopy  -O binary  tank_level_control.elf  "tank_level_control.bin"
   text	   data	    bss	    dec	    hex	filename
  34344	    748	   2044	  37136	   9110	tank_level_control.elf
Finished building: default.size.stdout
 
Finished building: tank_level_control.bin
 
Finished building: tank_level_control.list
 
21:49:15 **** Incremental Build of configuration Debug for project tank_level_control ****
make -j12 all 
arm-none-eabi-g++ "../Core/Src/main.cpp" -mcpu=cortex-m3 -std=gnu++14 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-use-cxa-atexit -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
In file included from ../Core/Src/height_sensor/HeightSensor.h:12,
                 from ../Core/Src/main.cpp:26:
../Core/Inc/fir_coeffs.h:3:14: warning: 'FIR_COEFFS' defined but not used [-Wunused-variable]
    3 | static float FIR_COEFFS[FILTER_NUM_COEFFS] = {
      |              ^~~~~~~~~~
arm-none-eabi-g++ -o "tank_level_control.elf" @"objects.list"   -mcpu=cortex-m3 -T"/home/senai/conical_tank_level_controller/tank_level_control/STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="tank_level_control.map" -Wl,--gc-sections -static -u _printf_float --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -lstdc++ -lsupc++ -Wl,--end-group
Finished building target: tank_level_control.elf
 
arm-none-eabi-size   tank_level_control.elf 
arm-none-eabi-objdump -h -S  tank_level_control.elf  > "tank_level_control.list"
arm-none-eabi-objcopy  -O binary  tank_level_control.elf  "tank_level_control.bin"
   text	   data	    bss	    dec	    hex	filename
  34344	    748	   2044	  37136	   9110	tank_level_control.elf
Finished building: default.size.stdout
 
Finished building: tank_level_control.bin
 
Finished building: tank_level_control.list
 
